architecture landing page

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -53,3 +53,19 @@
   margin: auto;
   margin-top: 2rem;
 }
+
+.video {
+  margin: auto;
+  margin-top: 2rem;
+}
+
+.citate-div {
+  margin: auto;
+  margin-top: 2rem;
+}
+
+.citate {
+  font-style: italic;
+  font-size: large;
+  color: blue;
+}
