--- a/frontend/src/components/DashboardPage/DashboardPage.css
+++ b/frontend/src/components/DashboardPage/DashboardPage.css
@@ -1,30 +1,24 @@
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  margin-top: 12rem;
-}
-
-.text-boxes{
+.text-boxes {
   margin: auto;
   width: 60%;
   padding: 10px;
 }
 
-.button-boxes{
+.button-boxes {
   margin: auto;
   width: 60%;
   padding: 10px;
-  padding: .5em;
-}
-
-.button-class{
   padding: 0.5em;
 }
 
-.icon-button{
+.button-class {
+  padding: 0.5em;
+}
+
+.icon-button {
   margin: auto;
 }
-.image-box{
+.image-box {
   background-size: cover;
   background-position: 50%;
   width: 60%;
@@ -33,13 +27,13 @@
   padding: 10px;
   margin: 0 auto;
 }
-.image-box img { 
+.image-box img {
   height: 100%;
   width: 100%;
   display: block;
 }
 
-.small-image-box{
+.small-image-box {
   background-size: cover;
   background-position: 50%;
   width: 30%;
@@ -88,4 +82,3 @@
   width: 8rem;
   height: 4rem;
 }
-
