--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -3,7 +3,13 @@
   top: 0;
   width: 100%;
   height: 7rem;
-  background-color: blue;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 63, 70, 1) 9%,
+    rgba(247, 113, 3, 1) 29%,
+    rgba(255, 63, 70, 1) 50%,
+    rgba(255, 72, 94, 1) 100%
+  );
   padding-top: 1.75rem;
   z-index: 9999;
 }
@@ -39,7 +45,6 @@
 
 .carousel {
   margin: auto;
-  margin-top: 9rem;
 }
 
 .main-header {
