--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -2,13 +2,11 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 7rem;
+  height: 5rem;
   background: linear-gradient(
     90deg,
-    rgba(255, 63, 70, 1) 9%,
-    rgba(247, 113, 3, 1) 29%,
-    rgba(255, 63, 70, 1) 50%,
-    rgba(255, 72, 94, 1) 100%
+    rgba(253,61,87,1) 37%,
+    rgba(248,156,49,1) 100%
   );
   padding-top: 1.75rem;
   z-index: 9999;
@@ -34,8 +32,8 @@
 }
 
 .sign-in-button {
-  width: 8rem;
-  height: 4rem;
+  width: 7rem;
+  height: 2rem;
 }
 
 .flex-column {
